...
            "state": "translated",
            "value": "启用通知以接收唤醒提醒。"
          }
        }
      }
    },
    "English": {
      "extractionState": "manual",
      "localizations": {
        "en-US": {
          "stringUnit": {
            "state": "translated",
            "value": "English"
...
            "state": "translated",
            "value": "反馈记录，%lld 条"
          }
        }
      }
    },
    "Follow System": {
      "extractionState": "manual",
      "localizations": {
        "en-US": {
          "stringUnit": {
            "state": "translated",
            "value": "Follow System"
...
            "state": "translated",
            "value": "你好，世界！"
          }
        }
      }
    },
    "Home": {
      "extractionState": "manual",
      "localizations": {
        "en-US": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
            "state": "translated",
            "value": "正在保存到备忘录…"
          }
        }
      }
    },
    "Search": {
      "extractionState": "manual",
      "localizations": {
        "en-US": {
          "stringUnit": {
            "state": "translated",
            "value": "Search"
...
            "state": "translated",
            "value": "选择 Echo 用于显示和回复的语言。"
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "en-US": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
            "state": "translated",
            "value": "将此创作以文本、PDF 或 Markdown 形式分享或导出。"
          }
        }
      }
    },
    "Simplified Chinese": {
      "extractionState": "manual",
      "localizations": {
        "en-US": {
          "stringUnit": {
            "state": "translated",
            "value": "Simplified Chinese"
...
